# mkcv

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml  version.yml
docs/: DEVELOPMENT.md
docs/changes/add-cover-letters/: proposal.md
docs/changes/initial-cli-tool/: design.md  tasks.md
docs/changes/initial-cli-tool/specs/: spec.md
docs/changes/interactive-generate/: proposal.md
docs/changes/interactive-regeneration/: design.md  proposal.md  specs.md  tasks.md
docs/changes/multi-theme-preview/: design.md  proposal.md  tasks.md
docs/changes/public-release/: design.md  proposal.md  tasks.md
docs/changes/restructure-application-workspace/: design.md  tasks.md
docs/changes/theme-system-overhaul/: design.md  proposal.md  tasks.md
docs/decisions/: 001-architecture-and-cli.md
docs/product/: PRD.md  research.md  roadmap.md
docs/specs/: architecture.md  cli-interface.md  data-models.md  restructure-application-workspace.md
examples/: mkcv.toml
examples/knowledge-base/: career.md
examples/mkcv-demo/: .gitignore  README.md  job-description.md  mkcv.toml
examples/mkcv-demo/knowledge-base/: voice.md
examples/mkcv-demo/themes/: example.yaml
openspec/changes/interactive-generate/: design.md  tasks.md
src/mkcv/: __init__.py  __main__.py
src/mkcv/adapters/: factory.py
src/mkcv/adapters/filesystem/: __init__.py  artifact_store.py  document_reader.py  pdf_reader.py  prompt_loader.py  workspace_manager.py
src/mkcv/adapters/llm/: _utils.py  anthropic.py  ollama.py  openai.py  retry.py  stub.py
src/mkcv/adapters/renderers/: __init__.py  rendercv.py  stub.py  typst_cover_letter.py
src/mkcv/cli/: __init__.py  app.py
src/mkcv/cli/commands/: cover_letter.py  generate.py  init_cmd.py  kb.py  render.py  status.py  (+2 more)
src/mkcv/config/: __init__.py  configuration.py  settings.toml  workspace.py
src/mkcv/core/: __init__.py
src/mkcv/prompts/: _voice_anchor.j2  analyze_jd.j2  extract_jd_metadata.j2  generate_cover_letter.j2  kb_generate.j2  kb_update.j2  regenerate_section.j2  review.j2  review_cover_letter.j2  select_experience.j2  structure_yaml.j2  tailor_bullets.j2  validate_resume.j2  write_mission.j2
src/mkcv/templates/: cover_letter.typ.j2
tests/: conftest.py
tests/test_adapters/: test_artifact_store.py  test_prompt_loader.py  test_workspace_manager.py  test_workspace_manager_resolution.py
tests/test_adapters/test_filesystem/: test_document_reader.py  test_pdf_reader.py
tests/test_adapters/test_llm/: test_anthropic.py  test_factory.py  test_kb_factory.py  test_ollama.py  test_openai.py  test_retry.py  test_stub.py  test_utils.py
tests/test_adapters/test_renderers/: __init__.py  test_format_filtering.py  test_rendercv.py  test_typst_cover_letter.py
tests/test_cli/: test_app.py  test_cover_letter_command.py  test_generate.py  test_generate_callbacks.py  test_kb_command.py  test_render.py  test_status.py  test_themes.py  test_validate_cmd.py
tests/test_cli/test_interactive/: test_commands.py  test_display.py  test_prompt_input.py  test_sections.py  test_session.py
tests/test_config/: test_configuration.py  test_workspace_discovery.py
tests/test_core/: test_cover_letter_error.py  test_exceptions.py  test_kb_generation_exceptions.py
tests/test_core/test_models/: test_ats_check.py  test_batch_render_result.py  test_bullet_review.py  test_cover_letter.py  test_cover_letter_design.py  test_cover_letter_result.py  test_cover_letter_review.py  test_custom_theme.py  test_document_content.py  test_earlier_experience_section.py  test_entry_layout.py  test_experience_selection.py  test_header_layout.py  test_jd_analysis.py  test_jd_models.py  test_kb_generation_result.py  test_keyword_coverage.py  test_languages_section.py  test_mission_statement.py  test_page_layout.py  test_pipeline_result.py  test_pricing.py  test_profile_preset.py  test_rendercv_resume.py  test_requirement.py  test_resume_cv.py  test_resume_design.py  test_resume_models.py  test_review_report.py  test_run_metadata.py  test_section_title_layout.py  test_selected_experience.py  test_skill_entry.py  test_skill_group.py  test_skills_section.py  test_stage_config.py  test_stage_metadata.py  test_tailored_bullet.py  test_tailored_content.py  test_tailored_role.py  (+5 more)
tests/test_core/test_services/: test_batch_render.py  test_cover_letter.py  test_cover_letter_retry.py  test_jd_reader.py  test_kb_generation_service.py  test_kb_validator.py  test_pipeline.py  test_pipeline_retry.py  test_regeneration.py  test_render.py  test_theme.py  test_validation.py  test_workspace_service.py  test_yaml_postprocessor.py
(+116 files in other folders)
