[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkcv"
version = "0.1.0"
description = "AI-powered CLI tool that generates ATS-compliant PDF resumes tailored to specific job applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Bastian Kuberek", email = "bastian@bkuberek.com"}
]
keywords = ["resume", "cv", "ai", "cli", "ats", "job-search", "career", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "cyclopts>=3.0",
    "pydantic>=2.0",
    "dynaconf>=3.2",
    "jinja2>=3.1",
    "httpx>=0.27",
    "rich>=13.0",
    "tomli-w>=1.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "rendercv[full]>=2.7",
    "pypdf>=6.9.1",
]

[project.urls]
Homepage = "https://github.com/bkuberek/mkcv"
Repository = "https://github.com/bkuberek/mkcv"
Issues = "https://github.com/bkuberek/mkcv/issues"
Changelog = "https://github.com/bkuberek/mkcv/blob/main/CHANGELOG.md"

[project.scripts]
mkcv = "mkcv.cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mkcv"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["mkcv"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["dynaconf", "anthropic", "anthropic.*", "openai", "openai.*", "rendercv", "rendercv.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version}"
tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
